[gd_scene load_steps=5 format=2]

[ext_resource path="res://items/commerce/door/Door.png" type="Texture" id=1]
[ext_resource path="res://scripts/Navigation.gd" type="Script" id=2]
[ext_resource path="res://items/commerce/door/DoorHover.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 50.4386, 78.1448 )

[node name="Door" type="Area2D"]
script = ExtResource( 2 )
scene = "res://scenes/commerce/Inside.tscn"
default_sprite = ExtResource( 1 )
hover_sprite = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="SpriteNode" type="Sprite" parent="."]
position = Vector2( 5.14376, 0.111685 )
scale = Vector2( 0.65, 0.65 )
texture = ExtResource( 1 )

[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
